# postmodem

./: .gitignore  LICENSE  Makefile  README.md  dune-project
analysis/: dune  typecheck.ml  typecheckAI.ml
ideas/: a.out  dune  example.ml  intro.ml
lib/: ast.ml  astSurface.ml  dune  helpers.ml  translator.ml  utils.ml
parsing/: dune  lexer.mll  parser.mly
test/: dune  mainTest.ml
